<resources>
    <string name="app_name">My calculator</string>
    <string name="btnLeftBracket">(</string>
    <string name="btnRightBracket">)</string>
    <string name="btnDivide">/</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnMultiply">×</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnPlus">+</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btnMinus">-</string>
    <string name="btnDot">.</string>
    <string name="btn0">0</string>
    <string name="btnResult">=</string>
    <string name="testText">0123456789/*-+=</string>
    <string name="testResult">for result</string>
    <string name="ac">AC</string>
    <string name="raise">^</string>
    <string name="emptyButton">♦</string>
    <string name="percent">%</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="sqrt">√</string>
    <string name="hintTvOperation">0</string>
    <string name="wrong_format">Некорректный ввод!</string>
    <string name="digitsAllowed">0123456789+-×÷().</string>
    <string name="one">Set First Theme</string>
    <string name="two">Set Second Theme</string>
    <string name="settings">Settings</string>
    <string name="btnMenuText">Menu</string>
    <string name="settingsText">Settings</string>
    <string name="del">DEL</string>

</resources>